Additional modifications include the 'stopYoutubeAd' function in 'scripts/youtube.js' being refactored for code readability. Moreover, the 'options/options.html' file was updated to include buttons for controlling ad skipping on the newly supported websites. The README file has been updated to include these new features and the version number was incremented in 'manifest.json'.

--- a/options/components/switch/switch.css
+++ b/options/components/switch/switch.css
@@ -20,7 +20,7 @@
   font-size: 16px;
   font-weight: 600;
   color: #555;
-  width: 100px;
+  white-space: nowrap;
 }
 
 .switch {
